add products pages

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 120px" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -34,14 +34,14 @@
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
 				<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-				<li class="nav-item active"><a href="about.html" class="nav-link">关于慧洋</a></li>
+				<li class="nav-item active"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
 			</ul>
 		</div>
 	</div>
 </nav>
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_3.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_7.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -54,6 +54,89 @@
 		</div>
 	</div>
 </section>
+
+
+
+
+<section class="ftco-section ftco-no-pt ftc-no-pb">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-5 order-md-last wrap-about py-5 wrap-about bg-light">
+				<div class="text px-4 ftco-animate">
+					<h1 class="mb-4">公司简介</h1>
+					<p>睿泽国际责任有限公司于2023年成立于西班牙马德里，依托在西20余年的经验，秉持合作、创新、协调的理念和价值观，为企业提供最好的服务。
+						公司吸纳西班牙和中国精英人士，包含跨学科硕博士，顺应中国经济深度融入世界经济的趋势，促进中国企业与西方国家资源高效配置。</p>
+					<p>公司与西班牙政府、中国政府部门、西班牙企业、中资企业之间的密切沟通合作，为中资企业在西营商起到桥梁的作用，主要业务范围包括：</p>
+					<p>1）金融保险服务：为企业寻找高收益投资机会，为企业寻找项目资金；为企业提供保险业务包括公司财产保险、员工医疗保险、公司事故险等，</p>
+					<p>2）企业IT技术解决方案：为企业在西营商提供办公基础IT设施服务，包括办公室及园区基础网络建设、企业办公软件、企业云基础设施、安保系统、企业太阳能电力，等。</p>
+					<p>3）产品代理：作为代理商代理企业产品在西销售，并在西推广运营产品。</p>
+					<p>4）其他企业服务：作为中资企业出海孵化器，帮助企业解决出海初期的公司相关事宜，为企业提供专业的西葡人才猎聘服务，为企业提供市场营销策划以及执行服务。</p>
+					<br>
+					<p>当前公司已与solventis、MAPFRE、华为、VIVO、海康威视、锐捷网络、ORANGE、小米、OPPO、弘正、中国移动、马德里商会、加泰罗尼亚企业发展局、中国商会、Zaragoza旅游开发局、
+						等中西企业及政府部门、协会达成深度合作，为您竭诚服务。</p>
+				</div>
+			</div>
+			<div class="col-md-7 wrap-about py-5 pr-md-4 ftco-animate">
+				<h1>公司业务</h1>
+				<div class="row mt-5">
+					<div class="services-2 d-flex">
+
+						<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-education"></span></div>
+						<div class="text">
+							<h3>金融投资保险业务</h3>
+
+							<p></p>
+							<p>项目投资服务</p>
+							<p>资产管理服务</p>
+							<p>企业保险服务</p>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-5">
+					<div class="services-2 d-flex">
+						<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-diploma"></span></div>
+						<div class="text">
+							<h3>企业IT技术解决方案</h3>
+							<p>云技术解决方案</p>
+							<p>企业IT基础设施解决方案</p>
+							<p>企业安保设施解决方案</p>
+							<p>数字能源解决方案</p>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-5">
+					<div class="services-2 d-flex">
+						<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-jigsaw"></span></div>
+						<div class="text">
+							<h3>产品代理</h3>
+							<p>智能手机</p>
+							<p>网络设备</p>
+							<p>安防设备</p>
+							<p>光伏设备</p>
+							<p>储能设备</p>
+							<p></p>
+						</div>
+					</div>
+				</div>
+				<div class="row mt-5">
+					<div class="services-2 d-flex">
+						<div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-books"></span></div>
+						<div class="text">
+							<h3>其他企业服务</h3>
+							<h3></h3>
+							<p>伊比利亚半岛人才猎聘服务</p>
+							<p>中资出海咨询服务</p>
+							<p>营销活动策划</p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+
+
 
 <section class="ftco-section contact-section">
 	<div class="container">
@@ -111,8 +194,6 @@
 
 
 
-
-
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
 		<div class="row mb-5">
@@ -122,9 +203,9 @@
 
 					<div class="block-23 mb-3">
 						<ul>
-							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</span></li>
+							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
-							<li><img src="images/QRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -141,24 +222,22 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How to become a full stack software engineer?</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st June, 2022</a></div>
+								<div><a href="#"><span class="icon-calendar"></span> 10 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
 								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
 							</div>
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How is the feeling being an architect?</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st May, 2022</a></div>
-								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
-								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
+								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
 						</div>
 					</div>
@@ -178,7 +257,7 @@
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
 						<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-						<li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
+						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
 
 					</ul>
@@ -212,6 +291,7 @@
 		</div>
 	</div>
 </footer>
+
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
 <script src="js/jquery.min.js"></script>
