--- a/contact.html
+++ b/contact.html
@@ -16,12 +16,11 @@
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/style.css">
-
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
         <div class="container d-flex align-items-center">
-            <a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 120px" src="images/logo.png"/></a>
+            <a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="oi oi-menu"></span> Menu
             </button>
@@ -33,19 +32,19 @@
                     <li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
                     <li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
                     <li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-                    <li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
                     <li class="nav-item  active"><a href="contact.html" class="nav-link">联系我们</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_2.jpg');">
+    <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_9.jpg');">
         <div class="overlay"></div>
         <div class="container">
             <div class="row no-gutters slider-text align-items-center justify-content-center">
                 <div class="col-md-9 ftco-animate text-center">
-                    <h1 class="mb-2 bread">Contact Me</h1>
+                    <h1 class="mb-2 bread">联系我们 | Contact Me</h1>
                     <p class="breadcrumbs">
                         <span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
                         <span class="mr-2"><a href="about.html">About <i class="ion-ios-arrow-forward"></i></a></span>
@@ -54,29 +53,33 @@
             </div>
         </div>
     </section>
+
+
+
+
+
     <section class="ftco-section contact-section">
         <div class="container">
-            <div class="row d-flex mb-5 contact-info">
+            <div class="row d-flex mb-5 contact-info" style = "color: #fcfcfd">
                 <div class="col-md-4 d-flex">
-                    <div class="  box p-4 text-center" style="background-image: url(images/image_6.png);" data-stellar-background-ratio="0.5">
-                        <h2 class="mb-3">ADDRESS</h2>
-                        <p>C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</p>
+                    <div class="  box p-4 text-center" style="background-image: url(images/image_6.jpg);" data-stellar-background-ratio="0.5">
+                        <h2 class="mb-3" style = "color: #fcfcfd">ADDRESS</h2>
+                        <p>C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</p>
                     </div>
                 </div>
                 <div class="col-md-4 d-flex">
-                    <div class="  box p-4 text-center" style="background-image: url(images/image_6.png);" data-stellar-background-ratio="0.5">
-                        <h2 class="mb-4">TELEPHONE</h2>
+                    <div class="  box p-4 text-center" style="background-image: url(images/image_7.jpg);" data-stellar-background-ratio="0.5">
+                        <h2 class="mb-4" style = "color: #fcfcfd">TELEPHONE</h2>
                             <ul>
-
                                 <li><span class="icon icon-phone"></span><span class="text">TEL：+34 918 188 085</span></li>
                                 <li><span class="icon icon-phone"></span><span class="text">Mobil: +34 604 902 828</span></li>
                             </ul>
                     </div>
                 </div>
                 <div class="col-md-4 d-flex">
-                    <div class="  box p-4 text-center" style="background-image: url(images/image_6.png);" data-stellar-background-ratio="0.5">
-                        <h2 class="mb-4">CHAT ON LINE</h2>
-                        <li><span class="icon icon-wechat"></span><span class="text">wechat：BrainOceanInternational</span></li>
+                    <div class="  box p-4 text-center" style="background-image: url(images/image_8.jpg); " data-stellar-background-ratio="0.5">
+                        <h2 class="mb-4" style = "color: #fcfcfd">CHAT ON LINE</h2>
+                        <li><span class="icon icon-wechat"></span><span class="text" >wechat：BrainOceanInternational</span></li>
                         <li><span class="icon icon-whatsapp"></span><span class="text">whatsapp：+34 604 902 828</span></li>
                     </div>
                 </div>
@@ -99,6 +102,38 @@
 
 
 
+    <section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+        <div class="overlay"></div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 suscribete_form">
+                    <h2>商业洽谈请扫码联系</h2>
+                    <div class="container-wrap">
+                        <div class="row no-gutters">
+
+                            <div class="col-md-6 ftco-animate">
+                                <a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/whatsapp.png);">
+                                    <div class="icon mb-4 d-flex align-items-center justify-content-center">
+                                        <p><img src="images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+                                    </div>
+                                </a>
+                            </div>
+
+                            <div class="col-md-6 ftco-animate">
+                                <a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/wechat.png);">
+                                    <div class="icon mb-4 d-flex align-items-center justify-content-center">
+                                        <p><img src="images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+                                    </div>
+                                </a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
@@ -110,9 +145,9 @@
 
                         <div class="block-23 mb-3">
                             <ul>
-                                <li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</span></li>
+                                <li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
                                 <li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
-                                <li><img src="images/QRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+                                <li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
                                 <li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
                                 <li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
                                 <li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -129,24 +164,22 @@
                     <div class="ftco-footer-widget mb-5">
                         <h2 class="ftco-heading-2">News</h2>
                         <div class="block-21 mb-4 d-flex">
-                            <a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+                            <a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
                             <div class="text">
-                                <h3 class="heading"><a href="#">How to become a full stack software engineer?</a></h3>
+                                <h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
                                 <div class="meta">
-                                    <div><a href="#"><span class="icon-calendar"></span> 1st June, 2022</a></div>
+                                    <div><a href="#"><span class="icon-calendar"></span> 10 July, 2023</a></div>
                                     <!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
                                     <!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
                                 </div>
                             </div>
                         </div>
                         <div class="block-21 mb-5 d-flex">
-                            <a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+                            <a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
                             <div class="text">
-                                <h3 class="heading"><a href="#">How is the feeling being an architect?</a></h3>
+                                <h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
                                 <div class="meta">
-                                    <div><a href="#"><span class="icon-calendar"></span> 1st May, 2022</a></div>
-                                    <!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
-                                    <!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
+                                    <div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
                                 </div>
                             </div>
                         </div>
@@ -166,7 +199,7 @@
                             <li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
                             <li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
                             <li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-                            <li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
+                            <li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
                             <li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
 
                         </ul>
@@ -200,7 +233,6 @@
             </div>
         </div>
     </footer>
-
 
 
 
