--- a/investment.html
+++ b/investment.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 120px" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -33,7 +33,7 @@
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
 				<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-				<li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
+				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
 			</ul>
 		</div>
@@ -44,7 +44,7 @@
 
 
 
-<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_7.jpg');">
+<section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_11.jpg');">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
@@ -52,7 +52,8 @@
 				<h1 class="mb-2 bread">金融投资保险服务</h1>
 				<p>
 					<a href="investment/projects/investment_projects.html" class="btn btn-info px-4 py-3"> 金融投资项目</a>
-					<a href="investment/mapfre/mapfre_seguro.html" class="btn btn-info px-4 py-3"> MPFRE保险</a>
+					<a href="investment/projects/investment_projects.html" class="btn btn-info px-4 py-3"> 资产管理</a>
+					<a href="investment/mapfre/mapfre_seguro.html" class="btn btn-info px-4 py-3"> MAPFRE保险</a>
 				</p>
 			</div>
 		</div>
@@ -62,25 +63,105 @@
 
 
 
-<section class="ftco-section">
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div id = "rowBlogs" class="row" class = "wrapper">
+			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="investment/projects/investment_projects.html" class="block-20 d-flex align-items-end" style="background-image: url('images/investment.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="investment/projects/investment_projects.html">金融投资项目</a></h3>
+						<p>BOI CEO Yanik作为在欧洲从业20余年资深金融投行专家，经手无数投行业务，点击查看成功案例以及现有项目。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="investment/projects/investment_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="investment/projects/asset_projects.html" class="block-20 d-flex align-items-end" style="background-image: url('images/asset-management.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="investment/projects/asset_projects.html">资产管理</a></h3>
+						<p>BOI CEO Yanik作为在欧洲唯一具有资产管理执照华人，为您提供个人资产管理以及全球资产配置服务。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="investment/projects/asset_projects.html" class="btn btn-secondary">查看项目详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="investment/mapfre/mapfre_seguro.html" class="block-20 d-flex align-items-end" style="background-image: url('images/seguro.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="investment/mapfre/mapfre_seguro.html">保险业务</a></h3>
+						<p>BOI 作为西班牙最大保险公司MAPFRE合作伙伴，为企业提供全方位保险产品，点击查看产品目录</p>
+						<div class="d-flex align-items-center mt-4">
+							<p  class="mb-0"><a href="investment/mapfre/mapfre_seguro.html" class="btn btn-secondary">查看产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
+</section>
+
+
+
+<section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-12 ftco-animate">
+			<div class="col-md-12 suscribete_form">
+				<h2>商业洽谈请扫码联系</h2>
+				<div class="container-wrap">
+					<div class="row no-gutters">
 
-				<p>
-					<img src="images/invesproject01.pdf" alt="" class="img-fluid">
-					<img src="images/invesproject02.jpg" alt="" class="img-fluid">
-					<img src="images/invesproject03.jpg" alt="" class="img-fluid">
-					<img src="images/invesproject04.jpg" alt="" class="img-fluid">
-				</p>
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/whatsapp.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
 
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/wechat.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
-
 </section>
-
-
 
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
@@ -91,9 +172,9 @@
 
 					<div class="block-23 mb-3">
 						<ul>
-							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</span></li>
+							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
-							<li><img src="images/QRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -110,24 +191,22 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How to become a full stack software engineer?</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st June, 2022</a></div>
+								<div><a href="#"><span class="icon-calendar"></span> 10 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
 								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
 							</div>
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How is the feeling being an architect?</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st May, 2022</a></div>
-								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
-								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
+								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
 						</div>
 					</div>
@@ -147,7 +226,7 @@
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
 						<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-						<li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
+						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
 
 					</ul>
@@ -181,6 +260,7 @@
 		</div>
 	</div>
 </footer>
+
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
 <script src="js/jquery.min.js"></script>
