--- a/products.html
+++ b/products.html
@@ -19,15 +19,9 @@
 </head>
 <body>
 
-
-</div>
-</div>
-</div>
-</div>
-</div>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
     <div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 120px" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav"
                 aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="oi oi-menu"></span> Menu
@@ -40,13 +34,12 @@
 				<li class="nav-item active"><a href="products.html" class="nav-link">产品代理</a></li>
 				<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
 				<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-				<li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
+				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
             </ul>
         </div>
     </div>
 </nav>
-
 
 <section class="hero-wrap hero-wrap-2" style="background-image: url('images/bg_6.jpg');">
     <div class="overlay"></div>
@@ -56,34 +49,151 @@
                 <h1 class="mb-2 bread">产品代理</h1>
 				<p class="breadcrumbs">
 				<p>
-					<a  class="btn btn-info px-4 py-3"> 智能手机</a>
-					<a  class="btn btn-info px-4 py-3"> 网络设备</a>
-					<a  class="btn btn-info px-4 py-3"> 安防设备</a>
-					<a  class="btn btn-info px-4 py-3"> 光伏设备</a>
-					<a  class="btn btn-info px-4 py-3"> 储能设备</a>
+					<a href="products/mobile/mobile.html" class="btn btn-info px-4 py-3"> 智能手机</a>
+					<a href="products/network/network.html" class="btn btn-info px-4 py-3"> 网络设备</a>
+					<a href="products/security/security.html" class="btn btn-info px-4 py-3"> 安防设备</a>
+					<a href="products/solar/solar.html" class="btn btn-info px-4 py-3"> 光伏设备</a>
+					<a href="products/battery/battery.html" class="btn btn-info px-4 py-3"> 储能设备</a>
 				</p>
+			</div>
         </div>
     </div>
 </section>
 
 
-<section class="ftco-section">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 ftco-animate">
-                <h3>Website</h3>
-                <p>
-                    <img src="images/portfolio_software_01.jpg" alt="" class="img-fluid">
-                </p>
-                <h3>Application</h3>
-                <p>
-                    <img src="images/camera.gif" alt="" class="img-fluid">
-                </p>
 
-            </div>
-        </div>
-    </div>
+<section class="ftco-section bg-light">
+	<div class="container">
+		<div id = "rowBlogs" class="row" class = "wrapper">
+			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
+				<div class="blog-entry">
+					<a href="products/mobile/mobile.html" class="block-20 d-flex align-items-end" style="background-image: url('products/mobile/smartphone.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="products/mobile/mobile.html">智能手机</a></h3>
+						<p href="products/mobile/mobile.html">BOI 作为VIVO, OPPO, XIAOMI 低于市场零售价格B2B销售，5台起售，点击查看产品目录</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="products/mobile/mobile.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="ml-auto mb-0">
+							</p>
+						</div>
+					</div>
+				</div>
+			</div>
 
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="products/network/network.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/network/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">New</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="products/network/network.html">网络设备</a></h3>
+						<p href="products/mobile/mobile.html">BOI 作为华为、锐捷一级代理商，代理路由器、交换机、服务器、光纤等网络设备，点击查看产品目录</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="products/network/network.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="products/security/security.html" class="block-20 d-flex align-items-end" style="background-image: url('ittech/security/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="products/security/security.html">安防设备</a></h3>
+						<p>BOI 作为海康威视、大华一级代理商，代理安防摄像头、智能控制系统，点击查看产品目录</p>
+						<div class="d-flex align-items-center mt-4">
+							<p  class="mb-0"><a href="products/security/security.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="products/solar/solar.html" class="block-20 d-flex align-items-end" style="background-image: url('products/solar/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="products/solar/solar.html">光伏设备</a></h3>
+						<p>BOI 作为太阳能光伏板一级代理商，提供一站式解决方案，点击查看代理产品目录</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="products/solar/solar.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="products/battery/battery.html" class="block-20 d-flex align-items-end" style="background-image: url('products/battery/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">NEW</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="products/battery/battery.html">储能设备</a></h3>
+						<p>BOI 作为电池、储能逆变器、储能系统产品一级代理商，用优质产品满足客户需求，点击查看代理产品目录</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="products/battery/battery.html" class="btn btn-secondary">查看更多产品详情<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+</section>
+
+
+
+<section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 suscribete_form">
+				<h2>商业洽谈请扫码联系</h2>
+				<div class="container-wrap">
+					<div class="row no-gutters">
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/whatsapp.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="images/whatsappQRCode.png" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+						<div class="col-md-6 ftco-animate">
+							<a class="gallery image-popup img d-flex align-items-center" style="background-image: url(images/wechat.png);">
+								<div class="icon mb-4 d-flex align-items-center justify-content-center">
+									<p><img src="images/wechatQRCode.jpg" style="width: auto; height: 50%"></p>
+								</div>
+							</a>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 
 
@@ -96,9 +206,9 @@
 
 					<div class="block-23 mb-3">
 						<ul>
-							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</span></li>
+							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
-							<li><img src="images/QRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -115,24 +225,22 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How to become a full stack software engineer?</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st June, 2022</a></div>
+								<div><a href="#"><span class="icon-calendar"></span> 10 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
 								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
 							</div>
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How is the feeling being an architect?</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st May, 2022</a></div>
-								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
-								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
+								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
 						</div>
 					</div>
@@ -152,7 +260,7 @@
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
 						<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-						<li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
+						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
 
 					</ul>
@@ -186,6 +294,7 @@
 		</div>
 	</div>
 </footer>
+
 
 <div id="ftco-loader" class="show fullscreen">
     <svg class="circular" width="48px" height="48px">
@@ -222,4 +331,5 @@
 
     gtag('config', 'UA-23581568-13');
 </script>
+</body>
 </html>
