--- a/news.html
+++ b/news.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark ftco_navbar ftco-navbar-light" id="ftco-navbar">
 	<div class="container d-flex align-items-center">
-		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 120px" src="images/logo.png"/></a>
+		<a class="navbar-brand" href="index.html"><img class="logo_img" style="height: 120px; width: 240px" src="images/logo.png"/></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="oi oi-menu"></span> Menu
 		</button>
@@ -33,7 +33,7 @@
 				<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
 				<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
 				<li class="nav-item active"><a href="news.html" class="nav-link">公司新闻</a></li>
-				<li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
+				<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 				<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
 			</ul>
 		</div>
@@ -45,7 +45,7 @@
 	<div class="container">
 		<div class="row no-gutters slider-text align-items-center justify-content-center">
 			<div class="col-md-9 ftco-animate text-center">
-				<h1 class="mb-2 bread">公司新闻</h1>
+				<h1 class="mb-2 bread">公司新闻 | News</h1>
 
 				<p class="breadcrumbs">
 					<span class="mr-2"><a href="index.html">Home <i class="ion-ios-arrow-forward"></i></a></span>
@@ -63,48 +63,55 @@
 		<div id = "rowBlogs" class="row" class = "wrapper">
 
 <!--			一个blog单元-->
+
+			<div class="col-md-6 col-lg-4 ftco-animate">
+				<div class="blog-entry">
+					<a href="news/20230711/news.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230711/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">11</span>
+							<span class="mos">July</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
+					<div class="text bg-white p-4">
+						<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Startup Program</a></h3>
+						<p>2023年7月11日， Huawei Cloud Startup Program 在西班牙马德里 Las Tablas 华为办公室举办，BOI CEO Yanik Yang应邀出席活动。</p>
+						<div class="d-flex align-items-center mt-4">
+							<p class="mb-0"><a href="news/20230711/news.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+
+
+
 			<div id = "dBlogs" class="col-md-6 col-lg-4 ftco-animate" class = "wrapper" style="align-items: center">
 				<div class="blog-entry">
+					<a href="news/20230710/news.html" class="block-20 d-flex align-items-end" style="background-image: url('news/20230710/1.jpg');">
+						<div class="meta-date text-center p-2">
+							<span class="day">05</span>
+							<span class="mos">July</span>
+							<span class="yr">2023</span>
+						</div>
+					</a>
 					<div class="text bg-white p-4">
-						<h3 class="heading"><a href="#">Based on Android Things, develop security system for youe home</a></h3>
-						<p>A mine friend gift me a Google developer kit, I was very happy, so I started to develop security system for my home.</p>
+						<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀出席华为云西班牙 Huawei Cloud Summit Spain 2023</a></h3>
+						<p href="news/20230710/news.html">2023年7月5日，Huawei Cloud Summit Spain 2023 在西班牙马德里举办，BOI CEO Yanik Yang应邀出席活动</p>
 						<div class="d-flex align-items-center mt-4">
-							<p class="mb-0"><a href="news/news01.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
+							<p class="mb-0"><a href="news/20230710/news.html" class="btn btn-secondary">Read more<span class="ion-ios-arrow-round-forward"></span></a></p>
 							<p class="ml-auto mb-0">
-<!--								<a href="#" class="mr-2">Admin</a>-->
 							</p>
 						</div>
 					</div>
 				</div>
 			</div>
 
-<!--			-->
-<!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
-<!--				<div class="blog-entry">-->
-<!--					<a href="news01.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_1.jpg');">-->
-<!--						<div class="meta-date text-center p-2">-->
-<!--							<span class="day">27</span>-->
-<!--							<span class="mos">January</span>-->
-<!--							<span class="yr">2019</span>-->
-<!--						</div>-->
-<!--					</a>-->
-<!--					<div class="text bg-white p-4">-->
-<!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
-<!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
-<!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news01.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
-<!--							<p class="ml-auto mb-0">-->
-<!--								<a href="#" class="mr-2">Admin</a>-->
-<!--							</p>-->
-<!--						</div>-->
-<!--					</div>-->
-<!--				</div>-->
-<!--			</div>-->
+
 
 
 <!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
 <!--				<div class="blog-entry">-->
-<!--					<a href="news01.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_2.jpg');">-->
+<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_2.jpg');">-->
 <!--						<div class="meta-date text-center p-2">-->
 <!--							<span class="day">27</span>-->
 <!--							<span class="mos">January</span>-->
@@ -115,7 +122,7 @@
 <!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
 <!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
 <!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news01.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--							<p class="ml-auto mb-0">-->
 <!--								<a href="#" class="mr-2">Admin</a>-->
 <!--							</p>-->
@@ -125,7 +132,7 @@
 <!--			</div>-->
 <!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
 <!--				<div class="blog-entry">-->
-<!--					<a href="news01.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">-->
+<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_3.jpg');">-->
 <!--						<div class="meta-date text-center p-2">-->
 <!--							<span class="day">27</span>-->
 <!--							<span class="mos">January</span>-->
@@ -136,7 +143,7 @@
 <!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
 <!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
 <!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news01.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--							<p class="ml-auto mb-0">-->
 <!--								<a href="#" class="mr-2">Admin</a>-->
 <!--							</p>-->
@@ -146,7 +153,7 @@
 <!--			</div>-->
 <!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
 <!--				<div class="blog-entry">-->
-<!--					<a href="news01.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_4.jpg');">-->
+<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_4.jpg');">-->
 <!--						<div class="meta-date text-center p-2">-->
 <!--							<span class="day">27</span>-->
 <!--							<span class="mos">January</span>-->
@@ -157,7 +164,7 @@
 <!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
 <!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
 <!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news01.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--							<p class="ml-auto mb-0">-->
 <!--								<a href="#" class="mr-2">Admin</a>-->
 <!--							</p>-->
@@ -167,7 +174,7 @@
 <!--			</div>-->
 <!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
 <!--				<div class="blog-entry">-->
-<!--					<a href="news01.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_5.jpg');">-->
+<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_5.jpg');">-->
 <!--						<div class="meta-date text-center p-2">-->
 <!--							<span class="day">27</span>-->
 <!--							<span class="mos">January</span>-->
@@ -178,7 +185,7 @@
 <!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
 <!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
 <!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news01.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--							<p class="ml-auto mb-0">-->
 <!--								<a href="#" class="mr-2">Admin</a>-->
 <!--							</p>-->
@@ -188,7 +195,7 @@
 <!--			</div>-->
 <!--			<div class="col-md-6 col-lg-4 ftco-animate">-->
 <!--				<div class="blog-entry">-->
-<!--					<a href="news01.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_6.jpg');">-->
+<!--					<a href="news.html" class="block-20 d-flex align-items-end" style="background-image: url('images/image_6.jpg');">-->
 <!--						<div class="meta-date text-center p-2">-->
 <!--							<span class="day">27</span>-->
 <!--							<span class="mos">January</span>-->
@@ -199,7 +206,7 @@
 <!--						<h3 class="heading"><a href="#">Skills To Develop Your Child Memory</a></h3>-->
 <!--						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>-->
 <!--						<div class="d-flex align-items-center mt-4">-->
-<!--							<p class="mb-0"><a href="news01.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
+<!--							<p class="mb-0"><a href="news.html" class="btn btn-secondary">Ver más<span class="ion-ios-arrow-round-forward"></span></a></p>-->
 <!--							<p class="ml-auto mb-0">-->
 <!--								<a href="#" class="mr-2">Admin</a>-->
 <!--							</p>-->
@@ -229,8 +236,18 @@
 </section>
 
 
-
-
+<section class="ftco-intro" style="background-image: url(images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+	<div class="overlay"></div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 suscribete_form">
+				<h2>更多信息请关注公众号</h2>
+				<p class="mb-0">请扫码关注</p>
+				<img src="images/wechatQRCode.jpg" style="width: auto; height: 50%">
+			</div>
+		</div>
+	</div>
+</section>
 
 <footer class="ftco-footer ftco-bg-dark ftco-section">
 	<div class="container">
@@ -241,9 +258,9 @@
 
 					<div class="block-23 mb-3">
 						<ul>
-							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro, 28947, Fuenlabrada, Madrid, Spain</span></li>
+							<li><span class="icon icon-map-marker"></span><span class="text">C/Río Ebro 15C, 28947, Fuenlabrada, Madrid, Spain</span></li>
 							<li><span class="icon icon-add_box"></span><span class="text">wechat：BrainOceanInternational</span></li>
-							<li><img src="images/QRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
+							<li><img src="images/wechatQRCode.jpg" style="height : auto; width: 50%; display : block; margin: 0 auto"; alt = ""></li>
 							<li><span class="icon icon-phone"></span><span class="text">TEL: +34 918 188 085</span></li>
 							<li><span class="icon icon-phone"></span><span class="text">MBL: +34 604 902 828</span></li>
 							<li><span class="icon icon-mail_outline"></span><span class="text">info@brainoceaninternational.com</span></li>
@@ -260,24 +277,22 @@
 				<div class="ftco-footer-widget mb-5">
 					<h2 class="ftco-heading-2">News</h2>
 					<div class="block-21 mb-4 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/image_1.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(news/20230710/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How to become a full stack software engineer?</a></h3>
+							<h3 class="heading"><a href="news/20230710/news.html">BOI CEO Yanik 应邀参加华为云西班牙 Huawei Cloud Summit Spain2023</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st June, 2022</a></div>
+								<div><a href="#"><span class="icon-calendar"></span> 10 July, 2023</a></div>
 								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
 								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
 							</div>
 						</div>
 					</div>
 					<div class="block-21 mb-5 d-flex">
-						<a class="blog-img mr-4" style="background-image: url(images/image_2.jpg);"></a>
+						<a class="blog-img mr-4" style="background-image: url(news/20230711/1.jpg);"></a>
 						<div class="text">
-							<h3 class="heading"><a href="#">How is the feeling being an architect?</a></h3>
+							<h3 class="heading"><a href="news/20230711/news.html">BOI CEO Yanik 应邀出席西班牙华为云初创大赛</a></h3>
 							<div class="meta">
-								<div><a href="#"><span class="icon-calendar"></span> 1st May, 2022</a></div>
-								<!--								<div><a href="#"><span class="icon-person"></span> Admin</a></div>-->
-								<!--								<div><a href="#"><span class="icon-chat"></span> 19</a></div>-->
+								<div><a href="#"><span class="icon-calendar"></span> 11 July, 2023</a></div>
 							</div>
 						</div>
 					</div>
@@ -297,7 +312,7 @@
 						<li class="nav-item"><a href="products.html" class="nav-link">产品代理</a></li>
 						<li class="nav-item"><a href="others.html" class="nav-link">其他服务</a></li>
 						<li class="nav-item"><a href="news.html" class="nav-link">公司新闻</a></li>
-						<li class="nav-item"><a href="about.html" class="nav-link">关于慧洋</a></li>
+						<li class="nav-item"><a href="about.html" class="nav-link">关于睿泽</a></li>
 						<li class="nav-item"><a href="contact.html" class="nav-link">联系我们</a></li>
 
 					</ul>
@@ -331,6 +346,7 @@
 		</div>
 	</div>
 </footer>
+
 
 <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
 <script src="js/jquery.min.js"></script>
